# aztec_diamonds

./: Cargo.toml  README.md
src/: grid.rs  main.rs
