[package]
name = "aztec_diamonds"
version = "0.1.0"
authors = ["Georgijs Vilums <georgijs.vilums@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
fastrand = "1.4.0"
pixels = "0.2.0"
winit = "0.24.0"
